# EventBite

./: requirements.txt
EventBite/: event_manager.py  main.py  requirements.txt  server.py
EventBite_Final/: pyproject.toml
EventBite_Final/client/: db.py  requirements.txt
EventBite_Final/server/: database_operations.py  event_manager.py  server.py
EventBite_server_client/client/: main.py
docs/: README.md
single_app/: database_operations.py  event_manager.py
