[project]
name = "EventBite"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
authors = [
    { name = "krtkygpta", email = "krtkygpta@gmail.com" }
]
dependencies = [
  "flet",
  'requests',
  'urllib3'

]

[tool.flet]
org = "com.krtkygpta"
product = "EventBite"
company = "krtkygpta"

[tool.flet.app]
path = "client"